Fixed simplex nav-collapse button on hover

--- a/simplex/bootstrap.css
+++ b/simplex/bootstrap.css
@@ -3375,6 +3375,10 @@ h6 {
   border-right: 0px solid white !important;
   color: #333333;
 }
+.btn-navbar:hover {
+  background-color: #cccccc;
+  background-position: 0 0;
+}
 .search-query {
   border: 1px solid #CCC;
   -webkit-border-radius: 2px;
