--- a/simplex/bootswatch.less
+++ b/simplex/bootswatch.less
@@ -41,6 +41,11 @@ h1, h2, h3, h4, h5, h6 {
 	color: @grayDark;
 }
 
+.btn-navbar:hover {
+    background-color: darken(@white, 20%);
+    background-position: 0 0;
+}
+
 // FORMS
 // -----------------------------------------------------
 
